# ai-traineree

./: .gitignore  .readthedocs.yaml  .travis.yml  Agents.md  CITATION.cff  Dockerfile  LICENSE.txt  README.md  Taskfile.dist.yaml  buildspec.yml  conftest.py  deploy.sh  execute_env.py  full_install.sh  install-ubuntu-debs.sh  pyproject.toml  pyrightconfig.json  requirement.txt  requirements-evns.txt  requirements-test.txt  requirements.txt  sagemaker.py  setup.cfg  setup.py  test.sh
.github/workflows/: ci-lint.yml  ci-test.yml  ci.yml  pip-publish.yml  superlinter.yml
agents/: dqn.py
ai_traineree/: __init__.py  buffers.py  env_runner.py  experience.py  loggers.py  multiagent_env_runner.py  networks.py  noise.py  policies.py  tasks.py  types.py  utils.py
ai_traineree/agents/: __init__.py  agent_factory.py  agent_utils.py  d3pg.py  d4pg.py  ddpg.py  dqn.py  dqn_pixels.py  dummy.py  networks.py  ppo.py  rainbow.py  sac.py  td3.py  utils.py
ai_traineree/buffers/: __init__.py  buffer_factory.py  experience.py  factory.py  nstep.py  per.py  replay.py  rollout.py
ai_traineree/loggers/: __init__.py  data_logger.py  file_logger.py  neptune_logger.py  tensorboard_logger.py
ai_traineree/multi_agent/: iql.py  maddpg.py
ai_traineree/multi_agents/: independent.py  iql.py  maddpg.py
ai_traineree/networks/: __init__.py  bodies.py  heads.py
ai_traineree/runners/: env_runner.py  multi_sync_env_runner.py  multiagent_env_runner.py
ai_traineree/tests/: test_buffers.py
ai_traineree/tests/agents/: test_utils.py
ai_traineree/types/: __init__.py  agent.py  dataspace.py  experience.py  primitive.py  state.py  task.py
aitraineree/: __init__.py  noise.py  policies.py  tasks.py
aitraineree/agents/: __init__.py  agent_factory.py  d3pg.py  d4pg.py  ddpg.py  dqn.py  dummy.py  ppo.py  rainbow.py  sac.py  td3.py
aitraineree/buffers/: __init__.py  buffer_factory.py  nstep.py  per.py  replay.py  rollout.py
aitraineree/loggers/: __init__.py  data_logger.py  file_logger.py  neptune_logger.py
aitraineree/multi_agents/: independent.py  iql.py  maddpg.py
aitraineree/networks/: __init__.py  bodies.py  curiosity.py  heads.py
aitraineree/runners/: env_runner.py  multi_sync_env_runner.py  multiagent_env_runner.py
aitraineree/types/: __init__.py  agent.py  dataspace.py  experience.py  state.py  task.py
docs/: agents.rst  browser_envs.md  buffers.rst  conf.py  development.rst  environments.rst  examples.rst  index.rst  intro.rst  multi_agent.rst  multi_agents.rst  networks.rst  policies.rst  running_envs.md  state.rst  tasks.rst
envs/: cart.py
envs/cart/: agent.py  test.py
examples/: __init__.py  bipedal_walker_ppo.py  bipedal_walker_sac.py  breakout_pixel_dqn.py  breakout_pixel_ppo.py  breakout_ppo.py  breakout_ram_dqn.py  cart.py  cart_dqn.py  cart_dummy.py  cart_rainbow.py  lunar_lander_continuous.py  lunar_lander_continuous_ppo.py  lunar_lander_ddpg.py  lunar_lander_discrete.py  lunar_lander_ppo.py  lunar_lander_ppo_multi.py  lunar_lander_sac.py  lunar_lander_td3.py  pendulum.py  pendulum_ddpg.py  pendulum_td3.py  sagemaker.py  snek_dqn.py  snek_rainbow.py  space_invaders_dqn.py  space_invaders_pixel_rainbow.py  spacerinvader_pixel_rainbow.py
examples/multi_agent/: prison_iql.py  prison_multiwalker.py  tennis_maddpg.py
examples/multi_agents/: prison_iql.py  tennis_maddpg.py
examples/petting_zoo/: connect_four.py  rps.py  waterworld.py
examples/runs/Nov17_15-20-07_LAPTOP-DQLMV16J/: events.out.tfevents.1637184007.LAPTOP-DQLMV16J.1596.0
examples/runs/Nov17_15-20-07_LAPTOP-DQLMV16J/policy_param_0/: events.out.tfevents.1637184024.LAPTOP-DQLMV16J.1596.2
examples/runs/Nov17_15-20-07_LAPTOP-DQLMV16J/policy_param_1/: events.out.tfevents.1637184024.LAPTOP-DQLMV16J.1596.3
examples/runs/Nov17_15-20-07_LAPTOP-DQLMV16J/policy_param_2/: events.out.tfevents.1637184024.LAPTOP-DQLMV16J.1596.4
examples/runs/Nov17_15-20-07_LAPTOP-DQLMV16J/policy_param_3/: events.out.tfevents.1637184024.LAPTOP-DQLMV16J.1596.5
extensions/browser_envs/: __init__.py
extensions/browser_envs/common/: __init__.py  env_lookup.py  http.py
infrastructure/: app.py  docker_pipeline.py  requirements.txt  setup.py
infrastructure/cdk.out/: manifest.json  tree.json
scripts/: add_github_env.py  interact.py  multi_exp_runner.py
tests/: conftest.py  test_buffers.py  test_env_runner.py  test_experience.py  test_multiagent_env_runner.py  test_policies.py  test_run_agents.py  test_tasks.py  test_utils.py  utils.py
tests/agents/: test_agent_factory.py  test_agent_utils.py  test_d3pg.py  test_d4pg.py  test_ddpg.py  test_dqn.py  test_ppo.py  test_rainbow.py  test_sac.py  test_td3.py  test_utils.py
tests/buffers/: test_buffer_factory.py  test_buffers.py  test_factory.py  test_nstep.py  test_per.py  test_replay.py  test_rollout.py
tests/networks/: test_bodies.py  test_curiosity.py  test_heads.py
tests/runners/: test_env_runner.py  test_multi_sync_env_runner.py  test_multiagent_env_runner.py
tests/types/: test_experience.py
