[project]
name = "ai-traineree"
version = "0.9.0"
description = "Yet another zoo of (Deep) Reinforcement Learning methods in Python using PyTorch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "torch>=2.0",
    "jsons>=1.4",
    "gymnasium>=1.0.0",
    "matplotlib>=3.7.5",
]

[build-system]
requires = ["uv>=0.4.9", "hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mock",
    "pytest>=6.2.5",
    "pytest-cov>=6.0.0",
    "pytest-mock",
    "pytest-timeout",
]

[project.optional-dependencies]

plot = ["matplotlib"]
tensorboard = ["tensorboard"]
neptune = ["neptune-client", "psutil"]
#gymnasium = ["gymnasium[all]>=1.0.0"]
examples = [
    "matplotlib",
    "tensorboard",
    #"gymnasium>=1.0.0",
]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]  # Basic: pycodestyle errors, pyflakes, warnings

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["aitraineree"]

[tool.pytest.ini_options]
addopts = "--verbose --cov=aitraineree --timeout=30 --ignore=tests/runners/test_env_runner.py --ignore=tests/runners/test_multi_sync_env_runner.py --ignore=tests/test_run_agents.py --ignore=tests/test_tasks.py"
testpaths = ["aitraineree", "tests"]

[tool.coverage.run]
omit = ["*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == '__main__':",
    "@abstract"
]
