[metadata]
name = ai-traineree
version = 0.0.7
author = Dawid Laszuk
author_email = ai-traineree@dawid.lasz.uk
description = Yet another zoo of (Deep) Reinforcment Learning methods in Python using PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/laszukdawid/ai-traineree
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.6
keywords = AI, RL, DeRL, ML, Deep Reinforcment Learning, Machine Learning
install_requires =
    numpy>=1.18
    torch>=1.7
    jsons

[options.extras_require]
plot = matplotlib
doc = sphinx; sphinx-rtd-theme
test = mock; pytest; pytest-cov; pytest-mock; flake8; gym[box2d]; pettingzoo[sisl]
# Loggers
tensorboard = tensorboard
neptune = neptune-client; psutil
# Envs
sneks = sneks @ git+https://github.com/laszukdawid/Sneks.git
gym = gym[all]
mlagents = mlagents
pettingzoo = pettingzoo
ple =
    ple @ git+https://github.com/ntasfi/PyGame-Learning-Environment.git
    MinAtar @ git+https://github.com/kenjyoung/MinAtar.git
    gym-games @ git+https://github.com/qlan3/gym-games.git


[tool:pytest]
addopts =
    --verbose
    --cov-config=setup.cfg
    --cov=ai_traineree
testpaths = ai_traineree tests

[run]
omit = 
    */test_*.py

[report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:


[flake8]
ignore = E203,
    E226,  # I like to group operations. What are you going to do about it, huh?
    E252,  # Ain't nobody tell me how to type arguments
    W503
max_line_length = 150
