[metadata]
name = ai-traineree
version = 0.4.0
author = Dawid Laszuk
author_email = ai-traineree@dawid.lasz.uk
description = Yet another zoo of (Deep) Reinforcment Learning methods in Python using PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/laszukdawid/ai-traineree
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.8
keywords = AI, RL, DeRL, ML, Deep Reinforcment Learning, Machine Learning
install_requires =
    numpy~=1.19.0
    torch~=1.9.0
    jsons~=1.4
    gym~=0.19.0

[options.extras_require]
plot = matplotlib
doc = 
    sphinx~=4.0
    sphinx-rtd-theme~=0.5
test = 
    mock~=4.0
    pytest~=5.4
    pytest-cov~=2.10
    pytest-mock~=3.3
    flake8~=3.9
    gym[box2d]~=0.19.0
    pettingzoo[sisl,other]==1.11.*  # `other` is needed because PettingZoo requires but doesn't add pillow
dev =
    black
    isort
    pycodestyle
# Loggers
tensorboard = tensorboard
neptune = neptune-client; psutil
# Envs
gym = gym[all]==0.19.0
mlagents = mlagents
pettingzoo = pettingzoo[other]==1.11.0  # `other` is needed because PettingZoo requires but doesn't add pillow
examples =
    matplotlib
    tensorboard
    gym~=0.19.0


[tool:pytest]
addopts =
    --verbose
    --cov-config=setup.cfg
    --cov=ai_traineree
testpaths = ai_traineree tests

[run]
omit = 
    */test_*.py

[report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    @abstract


[pycodestyle]
max-line-length = 120
ignore = E203,E226,E252,E293,W503
